# null_fn

./: Cargo.toml  README.md
src/: lib.rs
