[package]
name = "null_fn"
version = "0.1.1"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/null_fn"
description = "A proc attribute macro that allows for creating null function pointers in statics"
categories = ["development-tools::ffi"]
keywords = ["unsafe", "ffi", "null", "pointer", "static"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"